# EigenCapital

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  01_executive_summary.md  02_severity_register.md  AGENTS.md  BASELINE.md  BASELINE_SNAPSHOT.md  BASELINE_v2.md  CHANGELOG.md  CONTRIBUTING.md  CRONTAB.md  Dockerfile  LICENSE  LIVE_CONTRACT.md  Makefile  PHASE12_PLAN.md  README.md  docker-compose.yml  monitor_all  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
adr/: README.md
backtests/: __init__.py  adversarial_manifold.py  candidate_sl_sweep_results.json  expectancy_audit.py  forward_test.py  mas.py  model_comparator.py  model_evolution.py  model_promotion_engine.py  performance_metrics.py  regime_analysis.py  rolling_retrain.py  sandbox_retrain.py  sl_sensitivity.py  sl_sweep_all.py  sweep_candidates.py  sweep_eurusd_features.py  sweep_gbpcad_gbpnzd.py  sweep_regime_geom.py  sweep_remaining4_features.py  sweep_sl.py  sweep_sl_top5.py  tp_sensitivity.py  trade_analysis.py  train_new_models.py  walk_forward.py
benchmarks/: README.md  microbenchmark.py  mock_data.py
configs/: README.md  domain_loader.py  mt5_symbol_map.yaml  paper_config_registry.py  paper_trading.yaml  pydantic_models.py  schema_version.json
data/: weekly_pipeline.py
diagnostics/: debug_mr.py  eurusd_cot_isolation_test.py  model_validity_timeline.py  phase3_validation.py  probability_distribution.py  psi_response_curves.py  regime_ablation.py  signal_integrity_audit.py  state_machine_calibration.py  validity_sensitivity.py  volatile_exposure_test.py
docs/: ANALYSIS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_FOUNDATIONS.md  ARCHITECTURE_REFERENCE.md  BASELINE_SNAPSHOT.md  CONFIGURATION.md  COT_INVESTIGATION_PROTOCOL.md  CROSS_PLATFORM.md  DASHBOARD.md  DEVELOPMENT.md  DISASTER_RECOVERY.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  ENVIRONMENT.md  FAQ.md  FEATURES.md  GLOSSARY.md  GOVERNANCE.md  GOVERNANCE_LAYER.md  HARDENING_ROADMAP.md  INITIAL_DRAWDOWN_ANALYSIS.md  INSTITUTIONAL_AUDIT_REPORT.md  MAINTAINERS.md  MODES.md  MONITORING.md  MT5_DEPLOYMENT_RISK_TABLE.md  OPERATIONS.md  PAPER_TRADING_RUNBOOK.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_SYSTEM_SPEC_v1.md  README.md  RESEARCH_DECISIONS.md  RESEARCH_HISTORY.md  RISK_ITEMS.md  RISK_REDUCTION_REPORT_1pct.md  ROOT_CAUSE_SELL_CONCENTRATION.md  SECURITY.md  STATE_SCHEMA.md  STRESS_TEST_REPORT.md  (+4 more)
eigencapital/: __init__.py
equity/: cross_asset_scan.py  driver_analysis.py  residual_analyzer.py  signal_correlation.py  walk_forward_eurusd.py  walk_forward_nzdjpy.py  walk_forward_usdjpy.py
features/: alpha_features.py  archetypes.py  builder.py  contract.py  cot_features.py  cross_sectional.py  data_fetch.py  data_fetch_expanded.py  divergence.py  event_features.py  fxstreet_fetcher.py  interaction_features.py  labels.py  lead_lag_features.py  liquidity_regime.py  macro_narrative.py  market_structure.py  pair_specific.py  positioning_features.py  publication_lags.py  rates_features.py  regime_features.py  registry.py  structural_features.py  types.py
labels/: compat.py  generator.py  meta_labels.py  trend_adjusted_labels.py  triple_barrier.py
models/: hybrid_ensemble.py  macro_expert_head.py
monitoring/: importance_tracker.py  paper_dashboard.py  psi_monitor.py  validity_state_machine.py  weekly_report.py
ops/: eigencapital-backup.service  eigencapital-backup.timer  eigencapital-healthcheck.service  eigencapital-healthcheck.timer  eigencapital-retrain.service  eigencapital-retrain.timer  prometheus.yml
paper_trading/: asset_engine.py  asset_engine_factory.py  asset_pnl_controller.py  asset_state.py  compat.py  config_manager.py  data_fetcher.py  diagnostics.py  drift_scoring.py  dynamic_sltp.py  engine.py  execution_context.py  health_score.py  monitor.py  portfolio_builder.py  position_manager.py  risk_governance.py  satellite.py  scale_out.py  serve.py  serve_routes.py  shadow_actions.py  shadow_analytics.py  shadow_learning.py  shadow_sltp.py  simulation_snapshot.py  state_store.py  tp_compiler.py  tracer.py  weekly_review.py  wrappers.py  writer.py
portfolio/: hrp_allocator.py  risk_parity.py
quantforge/: __init__.py
quorrin/: __init__.py
risk/: drawdown_controls.py  position_sizing.py
scripts/: backtest_pnl.py  backtest_stacking.py  check_live_deps.sh  clean_signal_flips.py  crisis_replay.py  ensemble_pilot_backtest.py  gc_isolation_test.py  generate_promotion_report.py  improve_candidates.py  provenance_cli.py  replay_rebalance.py  reset_dashboard.py  score_tickers.py  shap_audit.py  signal_correlation_check.py  train_all_assets.py  (+2 more)
(+1365 files in other folders)
