[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "backtests*",
    "configs*",
    "data*",
    "features*",
    "labels*",
    "models*",
    "monitoring*",
    "paper_trading*",
    "portfolio*",
    "eigencapital*",
    "risk*",
    "shared*",
    "signals*",
]
exclude = ["tests*", "archive*", "notebooks*"]

[tool.setuptools.package-data]
configs = ["*.yaml"]
data = ["processed/*.parquet", "processed/*.csv", "research/*.json", "research/*.yaml", "research/*.parquet"]


[project]
name = "eigencapital"
version = "2.0.0"
description = "Modular quantitative research framework for regime-conditioned equity and FX strategy research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Eleven Forge"}]
keywords = ["quantitative-finance", "trading", "machine-learning", "xgboost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pandas>=2.3.3,<3.0",
    "numpy>=1.24,<3.0",
    "yfinance>=0.2,<2.0",
    "scikit-learn>=1.2,<2.0",
    "xgboost>=1.7,<4.0",
    "matplotlib>=3.7,<4.0",
    "ta>=0.10,<1.0",
    "pyarrow>=10,<30.0",
    "scipy>=1.10,<2.0",
    "statsmodels>=0.14,<1.0",
    "shap>=0.42,<1.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "plotly>=5.14",
    "jupyterlab>=4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "__init__.py",
    "archive",
    "backtests",
    "data",
    "diagnostics",
    "docs",
    "equity",
    "models",
    "notebooks",
    "paper_trading/dashboard",
    "scripts/analysis",
    "scripts/backtest",
    "scripts/capital_study",
    "scripts/diagnostics",
    "scripts/investigation",
    "scripts/optimization",
    "scripts/replay",
    "scripts/research",
    "scripts/restoration",
    "scripts/setup",
    "scripts/simulations",
    "scripts/training",
    "scripts/validation",
    "signals",
    "tests",
    "main.py",
]

[tool.ruff.lint]
select = ["I", "E", "F", "W", "UP", "N", "SIM", "BLE"]
# BLE001: all violations remediated as of 2026-07-12 — no new bare-except allowed.

[tool.ruff.lint.per-file-ignores]
"paper_trading/__init__.py" = ["N999"]
"paper_trading/execution/__init__.py" = ["N999"]
"labels/__init__.py" = ["N999"]
"tests/__init__.py" = ["N999"]
# ML convention: X (uppercase) for feature matrices, y for targets
"paper_trading/asset_engine.py" = ["N803", "N806"]
"paper_trading/asset_inference_pipeline.py" = ["N803", "N806"]
"paper_trading/asset_training_pipeline.py" = ["N803", "N806"]
"paper_trading/serve_handler.py" = ["N802"]
"paper_trading/diagnostics.py" = ["N803", "N806"]
"paper_trading/wrappers.py" = ["N803", "N806"]
# ML convention: X (uppercase) for feature matrices, y for targets
"labels/meta_labels.py" = ["N803", "N806"]
# Research scripts use uppercase X for ML feature matrix convention
"scripts/*.py" = ["N806", "N803"]
"tests/**/*.py" = ["N806", "N803"]
"shared/*.py" = ["N806", "N803"]
# BLE001: all violations remediated and removed from per-file-ignores as of 2026-07-12.
# E501: all grandfathered files (decision.py, drift_scoring.py, risk_governance.py,
#       shadow_learning.py, simulation_snapshot.py) removed from codebase as of 2026-07.
#       No remaining E501 per-file-ignores.


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backtests", "diagnostics", "eigencapital", "features", "labels", "models", "monitoring", "paper_trading", "portfolio", "risk", "shared", "signals"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
strict_optional = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files = [
    "paper_trading/governance/",
    "paper_trading/pek/contracts/",
    "paper_trading/orchestrator/admission/",
    "shared/portfolio_weights.py",
    "shared/kelly.py",
    "shared/factor_model.py",
]
exclude = [
    "tests/",
    "scripts/",
    "backtests/",
    "paper_trading/dashboard/",
]
